Enhance swagger doc
