# user-service/doc/swagger.json
@@ -1,8 +1,14 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "List APIs of UserManagement Service",
+        "title": "UserManagement Service API Document",
+        "termsOfService": "http://swagger.io/terms/",
+        "contact": {},
+        "version": "1.0"
     },
+    "host": "127.0.0.1:8081",
+    "basePath": "/v1",
     "paths": {
         "/users": {
             "get": {
@@ -30,13 +36,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "array",
-                                "items": {
-                                    "$ref": "#/definitions/dto.UserDto"
-                                }
-                            }
+                            "$ref": "#/definitions/swagdto.UserResponse"
                         }
                     },
                     "500": {
@@ -73,16 +73,38 @@
                     "type": "string"
                 },
                 "email": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "bob@gmail.com"
                 },
                 "firstName": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Bob"
                 },
                 "id": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1
                 },
                 "name": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "bob"
+                }
+            }
+        },
+        "swagdto.UserResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.UserDto"
+                    }
+                },
+                "error": {
+                    "type": "object"
+                },
+                "status": {
+                    "type": "integer",
+                    "example": 200
                 }
             }
         }
